--- a/intro.html
+++ b/intro.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <html>
-    <head>
 
-<title>Sanay website</title>
+<head><!--this is the head section-->
 
-    </head>
+    <title>Sanay website</title>
 
-    <body>
-        My name is Sanay Kaul<br>
-        I like space<br>
-        I coded this
-    </body>
+</head>
+
+<body>
+    My name is Sanay Kaul<br>
+    I like space<br>
+    I coded this
+</body>
 
 </html>
