--- a/audiovideo.html
+++ b/audiovideo.html
@@ -13,7 +13,8 @@
     </audio>
     <p>This is a nice video</p>
     <video width="400" height="300" controls autoplay poster="moon pfp.jpg" loop>
-        <source src="101442-video-720.mp4" type="video/mp4" Your browser does not support the video tag </video>
+        <source src="101442-video-720.mp4" type="video/mp4"> Your browser does not support the video tag
+    </video>
 
 
 </body>
